# airflow-ecommerce-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dashboard  Makefile  README.md  demo_standalone.db  docker-compose.dashboard.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_dashboard.py  run_local_demo.py  run_standalone_demo.py
