[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-ecommerce-pipeline"
version = "1.0.0"
description = "ELT pipeline for e-commerce data orchestrated with Apache Airflow"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["airflow", "data-engineering", "etl", "pipeline", "postgres"]

dependencies = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-postgres>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "faker>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/airflow-ecommerce-pipeline"
"Bug Reports" = "https://github.com/YOUR_USERNAME/airflow-ecommerce-pipeline/issues"
"Source" = "https://github.com/YOUR_USERNAME/airflow-ecommerce-pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ============================================
# RUFF Configuration
# ============================================
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"dags/*" = ["ARG"]

[tool.ruff.isort]
known-first-party = ["src"]

# ============================================
# BLACK Configuration
# ============================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.ruff_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# ============================================
# PYTEST Configuration
# ============================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================
# COVERAGE Configuration
# ============================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true

# ============================================
# MYPY Configuration
# ============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
]
